# openresearch-mcp-server

./: .env.example  README.md  pyproject.toml  requirements.txt  test_sequential.py
doc/: agent.md  go-service-doc.md  mcp.md
scripts/: stop_server.sh
src/: __init__.py  config.py  main.py
src/clients/: __init__.py  go_client.py
src/core/: __init__.py
src/core/tools/: __init__.py  author_tools.py  base_tools.py  network_tools.py  paper_tools.py  trend_tools.py
src/mcp/tools/: __init__.py  author_tools.py  network_tools.py  paper_tools.py  trend_tools.py
src/models/: __init__.py  data_models.py  tool_schemas.py
src/server/: __init__.py  mcp_server.py
src/services/: data_processor.py
src/utils/: __init__.py  error_handler.py  logging_config.py
tests/: debug_search_format.py  interactive_test.py  test_config.py  test_mcp_server.py  test_sequential.py
