# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openresearch-mcp-server"
version = "0.1.0"
description = "MCP Server for Academic Research Data"
license = { text = "MIT" }
authors = [{name = "ivan", email = "your.email@example.com"}]
dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.8.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.1",
    "uvicorn>=0.30.0",
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.0.0",
    "structlog>=23.0.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "ujson>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "aioresponses>=0.7.6"
]
dev = [
    "black>=23.3.0"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88